# auth-service/src/common/publicRoutes.ts
@@ -1,8 +1,1 @@
-export const PublicRoutes = [
-    'ping',
-    'swagger',
-    'doc',
-    'swagger-ui/docs',
-    'auth/login',
-    'auth/signup'
-];
+export const PublicRoutes = ['ping', 'swagger', 'doc', 'swagger-ui/docs', 'auth/login', 'auth/signup'];
