# auth-service/src/core/RequestContext/userDetails.ts
@@ -4,12 +4,7 @@ export class UserDetails {
     readonly fullName: string;
     readonly email: string;
 
-    constructor(
-        userId: string,
-        userName: string,
-        fullName: string,
-        email: string
-    ) {
+    constructor(userId: string, userName: string, fullName: string, email: string) {
         this.userId = userId;
         this.userName = userName;
         this.fullName = fullName;
